# firmware

./: .gitignore  .prettierignore  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  Kconfig  LICENSE  README.md  e2e.js  nrf9160_pca10090ns.overlay  package-lock.json  package.json  prj.conf  prj_nrf9160dk_nrf9160ns.conf  prj_thingy91_nrf9160ns.conf  renovate.json  sample.yaml  schedule.js  west.yml
.circleci/: config.yml
.github/workflows/: assing-triage-label-to-new-issues.yaml  build-and-release.yaml  cachedir.patch  (+7 more)
ci/: schedule.ts
feature-runner/: run-features.ts
features/: CheckModemFirmware.feature  Connect.feature  Delete.feature  FOTA.feature  RunFirmware.feature
include/: lte_lc.h  modem_info.h
lib/: Kconfig
samples/nrf9160/cat_tracker/: CMakeLists.txt  Kconfig  nrf9160_pca10090ns.overlay  nrf9160_pca20035ns.overlay  prj.conf  sample.yaml
samples/nrf9160/cat_tracker/src/: certificates.h  main.c
samples/nrf9160/cat_tracker/src/accelerometer/: CMakeLists.txt  accelerometer.c  accelerometer.h
samples/nrf9160/cat_tracker/src/batstat/: CMakeLists.txt  batstat.c
samples/nrf9160/cat_tracker/src/dependencies/: accelerometer.h  batstat.c  mqtt_func.c
samples/nrf9160/cat_tracker/src/gps_controller/: Kconfig  gps_controller.c  gps_controller.h
samples/nrf9160/cat_tracker/src/leds/: leds.c  leds.h
samples/nrf9160/cat_tracker/src/modem_data/: CMakeLists.txt  modem_data.c  modem_data.h
samples/nrf9160/cat_tracker/src/modem_stats/: CMakeLists.txt  modem_stats.c  modem_stats.h
samples/nrf9160/cat_tracker/src/mqtt_behaviour/: CMakeLists.txt  certificates.h  mqtt_behaviour.c  mqtt_behaviour.h
samples/nrf9160/cat_tracker/src/mqtt_codec/: mqtt_codec.c  mqtt_codec.h
samples/nrf9160/cat_tracker/src/mqtt_func/: CMakeLists.txt
samples/nrf9160/cat_tracker/src/string_manipulation/: CMakeLists.txt  string_manipulation.c  string_manipulation.h
src/: main.c
(+151 files in other folders)
